# simpleutf

./: CMakeLists.txt  Config.cmake.in  LICENSE.txt
src/: CMakeLists.txt  simpleutf.c  simpleutf.h
tests/: CMakeLists.txt  sutf8_len_test.c
